fix dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,14 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
   --foreground: #171717;
+  --background: #ffffff;
+  --background-s: #e1e1e1;
 }
 
 @theme inline {
   --color-background: var(--background);
+  --color-background-s: var(--background-s);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
@@ -14,8 +16,9 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
     --foreground: #ededed;
+    --background: #2d2d2d;
+    --background-s: #747474;
   }
 }
 
